--- a/project6/graphics.html
+++ b/project6/graphics.html
@@ -7,54 +7,14 @@
     <title>Graphic Design</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="carousel.css">
+    <link rel="stylesheet" href="designs.css">
     <link rel="shortcut icon" type="image/x-icon" href="img_graphics/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <style>
-        .photoshop1,
-        .photoshop2, .illustrator1, .illustrator2 {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
 
-        .indesign {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .evolve, .indesign2 {
-            padding-right: 20px;
-        }
-
-        .photoshop1 img,
-        .photoshop2 img, .illustrator1 img, .illustrator2 img {
-            max-width: 450px;
-            max-height: 450px;
-        }
-
-        .photoshop2 p,
-        .photoshop1 p, .illustrator1 p, .illustrator2 p, .indesign p {
-            font-size: .5em;
-            padding: 5px;
-        }
-        .magazine {
-            max-width: 372px;
-            max-height: 372px;
-        }
-        .evolve_ad {
-            max-width: 500px;
-            max-height: 500px;
-        }
-        .evolve {
-            max-width:500px;
-            max-height: 500px;
-        }
-        img {
-            border-radius: 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -70,7 +30,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Graphic Design</h1>
+        <h1 class="main">Graphics</h1>
         <p id="skip">
             I have always been a creator, but it all started with a passion for drawing. Over the years I
             started to experiment with different mediums. I’d always thought of art as a hobby, it had never crossed my
@@ -91,110 +51,102 @@
         </p>
 
         <h1>Photoshop Work</h1>
-        <div class="photoshop1">
-            <div>
-                <img src="img_graphics/album_record.jpg"
-                    alt="redesign of a Crosby & Nash album with a red slide coming out of a man's face and a singer with guitar sliding down it">
-                <p>Crosby & Nash Album Redesign. 2022.</p>
-            </div>
-            <div>
-                <img src="img_graphics/lotteryticket.jpg" alt="Umbrella Academy inspired scratch-off ticket">
-                <p>Scratch Ticket. 2022.</p>
-            </div>
-            <div>
-                <img src="img_graphics/instacart.jpg" alt="70s inspired Instacart flier">
-                <p>Instacart Vintage Flier. 2022.</p>
-            </div>
-        </div>
-        <div class="photoshop2">
-            <div>
-                <img src="img_graphics/celiac.jpg" alt="ad for a celiac awareness baking class">
-                <p>Hold The Gluten Ad. 2023.</p>
-            </div>
-            <div>
-                <img src="img_graphics/billie.jpg" alt="Magazine cover of a Bliie Elish Story">
-                <p>Billie Eilish Magazine Cover. 2023.</p>
-            </div>
-            <div>
-                <img src="img_graphics/moderno.jpg" alt="Magazine cover for male fashion">
-                <p>Moderno Magazine Cover. 2023.</p>
-            </div>
-        </div>
-
-        <h1>Illustrator Work</h1>
-        <div class="illustrator1">
-            <div>
-                <img src="img_graphics/mouth_shirt.jpg"
-                    alt="t-shirt design for the Graphic Design and Creative Media CRTC of a mouth pretending to smoke with a pen">
-                <p>Graphic Design CRTC Shirt. 2022.</p>
-            </div>
-            <div>
-                <img src="img_graphics/logo_chris.jpg" alt="logo for architecture firm">
-                <p>Luxury Houses Mexico Logo. 2021.</p>
-            </div>
-            <div>
-                <img src="img_graphics/van_drawing.jpg" alt="logo of green van with surfboards and palm trees">
-                <p>Beach Van CRTC. 2021.</p>
-            </div>
-        </div>
-        <div class="illustrator2">
-            <div>
-                <img src="img_graphics/calenton2.jpg" alt="Calenton Music Fest Logo">
-                <p>Calenton Logo. 2023.</p>
-            </div>
-            <div>
-                <img src="img_graphics/calenton.jpg" alt="fire logo for calenton music festival">
-                <p>Calenton t-shirt. 2023.</p>
-            </div>
-            <div>
-                <img src="img_graphics/honey_products.jpg" alt="product design of Honey B Cosmetics">
-                <p>Honey B. Cosmetics Product Design. 2022.</p>
-            </div>
-        </div>
-
-        <h1>InDesign Work</h1>
-        <div class="indesign">
-            <div>
-                <img src="img_graphics/magazine.jpg" alt="AI Magazine Cover" class="evolve">
-                <p>Evolve Magazine. 2023.</p>
-            </div>
-            <div class="indesign2">
-                <img src="img_graphics/magazine2.jpg" alt="AI Magazine spread introducing AI" class="magazine"><br><br>
-                <img src="img_graphics/magazine3.jpg" alt="AI Magazine spread about Pros and Cons of AI" class="magazine"><br><br>
-            </div>
-            <div>
-                <img src="img_graphics/magazine1.jpg" alt="Apple advertisement for back cover" class="evolve_ad">
-            </div>
-        </div>
-       
-
-        <h1>Certificates</h1>
-        <div class="slideshow">
-            <div class="mySlides fade">
-                <img src="img_graphics/certificate4.jpg" style="width:100%" alt="Photoshop Certificate">
-            </div>
-            <div class="mySlides fade">
-                <img src="img_graphics/certificate2.jpg" style="width:100%" alt="Illustrator Certificate">
-            </div>
-            <div class="mySlides fade">
-                <img src="img_graphics/certificate1.jpg" style="width:100%" alt="In Design certificate">
-            </div>
-            <div class="mySlides fade">
-                <img src="img_graphics/certificate3.jpg" style="width:100%" alt="visual design certificate">
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
-        </div>
-        <br>
-        <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-        </div>
-
     </div>
+    <div class="photoshop1">
+        <div>
+            <img src="img_graphics/billie.jpg" alt="Magazine cover of a Bliie Elish Story">
+        </div>
+        <div>
+            <img src="img_graphics/album_record.jpg"
+                alt="redesign of a Crosby & Nash album with a red slide coming out of a man's face and a singer with guitar sliding down it">
+        </div>
+        <div>
+            <img src="img_graphics/moderno.jpg" alt="Magazine cover for male fashion brand">
+        </div>
+    </div>
+    <div class="photoshop2">
+        <div>
+            <img src="img_graphics/celiac.jpg" alt="ad for a celiac awareness baking class">
+        </div>
+        <div>
+            <img src="img_graphics/lotteryticket.jpg" alt="Umbrella Academy inspired scratch-off ticket">
+        </div>
+        <div>
+            <img src="img_graphics/instacart.jpg" alt="70s inspired Instacart flyer">
+        </div>
+    </div>
+
+    <div class="container">
+        <h1>Illustrator Work</h1>
+    </div>
+    <div class="illustrator1">
+        <div>
+            <img src="img_graphics/mouth_shirt.jpg"
+                alt="t-shirt design for the Graphic Design and Creative Media CRTC of a mouth pretending to smoke with a pen">
+        </div>
+        <div>
+            <img src="img_graphics/logo_chris.jpg" alt="logo for architecture firm">
+        </div>
+        <div>
+            <img src="img_graphics/honey_products.jpg" alt="product design of Honey B Cosmetics">
+        </div>
+    </div>
+    <div class="illustrator2">
+        <div>
+            <img src="img_graphics/calenton2.jpg" alt="Calenton Music Fest Logo">
+        </div>
+        <div>
+            <img src="img_graphics/calenton.jpg" alt="fire logo for calenton music festival">
+        </div>
+        <div>
+            <img src="img_graphics/ee.jpg" alt="exotic elegance logo">
+        </div>
+    </div>
+    <div class="container">
+        <h1>InDesign Work</h1>
+    </div>
+    <div class="indesign">
+        <div>
+            <img src="img_graphics/magazine.jpg" alt="AI Magazine Cover" class="evolve">
+        </div>
+        <div class="indesign2">
+            <img src="img_graphics/magazine2.jpg" alt="AI Magazine spread introducing AI" class="magazine"><br><br>
+            <img src="img_graphics/magazine3.jpg" alt="AI Magazine spread about Pros and Cons of AI"
+                class="magazine"><br><br>
+        </div>
+        <div>
+            <img src="img_graphics/magazine1.jpg" alt="Apple MacBook Pro advertisement for magazine back cover" class="evolve_ad">
+        </div>
+    </div>
+
+    <div class="container">
+        <h1>Certificates</h1>
+    </div>
+    <div class="slideshow">
+        <div class="mySlides fade">
+            <img src="img_graphics/certificate4.jpg" style="width:100%" alt="Photoshop Certificate">
+        </div>
+        <div class="mySlides fade">
+            <img src="img_graphics/certificate2.jpg" style="width:100%" alt="Illustrator Certificate">
+        </div>
+        <div class="mySlides fade">
+            <img src="img_graphics/certificate1.jpg" style="width:100%" alt="In Design certificate">
+        </div>
+        <div class="mySlides fade">
+            <img src="img_graphics/certificate3.jpg" style="width:100%" alt="Visual design certificate">
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+    </div>
+
     <footer>
         <div class="footer">
             <div class="sitelinks">
