--- a/project6/graphics.html
+++ b/project6/graphics.html
@@ -50,7 +50,7 @@
             individual.
         </p>
 
-        <h1>Photoshop Work</h1>
+        <h2>Photoshop Work</h2>
     </div>
     <div class="photoshop1">
         <div>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="container">
-        <h1>Illustrator Work</h1>
+        <h2>Illustrator Work</h2>
     </div>
     <div class="illustrator1">
         <div>
@@ -103,7 +103,7 @@
         </div>
     </div>
     <div class="container">
-        <h1>InDesign Work</h1>
+        <h2>InDesign Work</h2>
     </div>
     <div class="indesign">
         <div>
@@ -120,7 +120,7 @@
     </div>
 
     <div class="container">
-        <h1>Certificates</h1>
+        <h2>Certificates</h2>
     </div>
     <div class="slideshow">
         <div class="mySlides fade">
@@ -150,14 +150,14 @@
     <footer>
         <div class="footer">
             <div class="sitelinks">
-                <h2>Site Map</h2>
+                <h3>Explore</h3>
                 <a href="home.html">Maria Ruelas</a><br>
                 <a href="graphics.html">Graphic Design</a><br>
                 <a href="photos.html">Photography</a><br>
                 <a href="contact.html">Contact</a><br>
             </div>
             <div class="socials">
-                <h2>Contact Me</h2>
+                <h3>Contact Me</h3>
                 <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" class="instagram"
                         alt="instagram logo"></a>
                 <a href="tel:6039319825"><img src="phone_logo.png" class="phone" alt="phone logo"></a>
