--- a/project6/home.html
+++ b/project6/home.html
@@ -62,7 +62,7 @@
     <div class="container">
         <h1 class="main">About</h1>
         <section>
-            <h1>Maria Ruelas Arceo</h1>
+            <h2>Maria Ruelas Arceo</h2>
             <div class="about">
                 <div class="info">
                     <p id="skip">
@@ -107,14 +107,14 @@
     <footer>
         <div class="footer">
             <div class="sitelinks">
-                <h2>Site Map</h2>
+                <h3>Explore</h3>
                 <a href="home.html">Maria Ruelas</a><br>
                 <a href="graphics.html">Graphic Design</a><br>
                 <a href="photos.html">Photography</a><br>
                 <a href="contact.html">Contact</a><br>
             </div>
             <div class="socials">
-                <h2>Contact Me</h2>
+                <h3>Contact Me</h3>
                 <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" class="instagram"
                         alt="instagram logo"></a>
                 <a href="tel:6039319825"><img src="phone_logo.png" class="phone" alt="phone logo"></a>
