--- a/project6/contact.html
+++ b/project6/contact.html
@@ -53,7 +53,7 @@
     </nav>
     <div class="container">
     <h1 class="main">Contact Me</h1>
-        <form action="" method="post" class="formy" id="skip">
+        <form method="post" class="formy" id="skip">
             <label for="firstname">First Name</label><br>
             <input type="text" id="firstname" name="firstname"><br>
             <label for="lastname">Last Name</label><br>
@@ -70,7 +70,7 @@
     <footer>
         <div class="footer">
             <div class="sitelinks">
-                <h2>Site Map</h2>
+                <h3>Explore</h3>
                 <a href="home.html">Maria Ruelas</a><br>
                 <a href="graphics.html">Graphic Design</a><br>
                 <a href="photos.html">Photography</a><br>
@@ -78,7 +78,7 @@
             </div>
             <br>
             <div class="socials">
-                <h2>Contact Me</h2>
+                <h3>Contact Me</h3>
                 <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" class="instagram"
                         alt="instagram logo"></a>
                 <a href="tel:6039319825"><img src="phone_logo.png" class="phone" alt="phone logo"></a>
