--- a/project6/photos.html
+++ b/project6/photos.html
@@ -10,7 +10,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="img_graphics/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
     <style>
         .grid,
         .grid2,
@@ -36,7 +38,6 @@
             width: 100%;
             border-radius: 10px;
         }
-
     </style>
 </head>
 
@@ -55,9 +56,7 @@
     <div class="container">
         <h1 class="main">Photos</h1>
         <section>
-            <h1>
-                Black and White Portraits
-            </h1>
+            <h2>Black and White Portraits</h2>
             <p id="skip">
                 Whenever I am making a portrait I ask myself, what am I trying to communicate with this image? And how
                 would
@@ -98,7 +97,7 @@
             </div>
         </section>
         <section>
-            <h1>The Harrington</h1>
+            <h2>The Harrington</h2>
             <p>
                 One of my biggest interests and hobbies is music. Whether I’m playing my guitar, listening to it on my
                 headphones, or photographing it live. Music fuels my everyday life and accompanies me everywhere I go.
@@ -122,7 +121,7 @@
                     <img src="img_photos/harrington05.jpg" alt="guitarist lighting cigarrette">
                 </div>
                 <div>
-                    <img src="img_photos/harrington01.jpg" alt="girl holding birthday cake in basement">    
+                    <img src="img_photos/harrington01.jpg" alt="girl holding birthday cake in basement">
                 </div>
                 <div>
                     <img src="img_photos/harrington06.jpg" alt="girl smoking a cigarrette with emphasis on smoke">
@@ -137,7 +136,8 @@
                     <img src="img_photos/harrington16.jpg" alt="man playing baritone saxophone">
                 </div>
                 <div>
-                    <img src="img_photos/harrington14.jpg" alt="woman in a crowd in a basement music venue smoking a cigarrette">
+                    <img src="img_photos/harrington14.jpg"
+                        alt="woman in a crowd in a basement music venue smoking a cigarrette">
                 </div>
                 <div>
                     <img src="img_photos/harrington12.jpg" alt="man playing the trumpet">
@@ -157,7 +157,7 @@
             </div>
         </section>
         <section>
-            <h1>Stuck In A Daydream</h1>
+            <h2>Stuck In A Daydream</h2>
             <p>
                 Dreams have always been facinating to me. For this collection of photographs I wanted to achieve a
                 surreal,
@@ -176,11 +176,11 @@
                     <img src="img_photos/dream02.jpg" alt="girl in pink underwear and boots belly down with elbows up">
                 </div>
                 <div>
-                    <img src="img_photos/dream05.jpg" alt="girl laying on pillow with one eye looking at the camera and the other eye covered with her extended arm">
+                    <img src="img_photos/dream05.jpg"
+                        alt="girl laying on pillow with one eye looking at the camera and the other eye covered with her extended arm">
                 </div>
                 <div>
-                    <img src="img_photos/dream08.jpg"
-                        alt="pink boots on wall">
+                    <img src="img_photos/dream08.jpg" alt="pink boots on wall">
                 </div>
                 <div>
                     <img src="img_photos/dream12.jpg" alt="girl in pink underwear kneeling with hand on forehead">
@@ -192,18 +192,18 @@
                     <img src="img_photos/dream07.jpg" alt="girl with pink underwear laying down with closed eyes">
                 </div>
                 <div>
-                    <img src="img_photos/dream04.jpg"
-                        alt="zoomed in picture of vanity">
+                    <img src="img_photos/dream04.jpg" alt="zoomed in picture of vanity">
                 </div>
                 <div>
-                    <img src="img_photos/dream06.jpg" alt="girl laying on pillow with one eye looking at the camera and the other eye covered with her extended arm">
+                    <img src="img_photos/dream06.jpg"
+                        alt="girl laying on pillow with one eye looking at the camera and the other eye covered with her extended arm">
                 </div>
                 <div>
-                    <img src="img_photos/dream10.jpg" alt="face of girl in the sun with head resting on pillow and hand on forehead">
+                    <img src="img_photos/dream10.jpg"
+                        alt="face of girl in the sun with head resting on pillow and hand on forehead">
                 </div>
                 <div>
-                    <img src="img_photos/dream03.jpg"
-                        alt="girl resting elbows on pillow with eyes closed">
+                    <img src="img_photos/dream03.jpg" alt="girl resting elbows on pillow with eyes closed">
                 </div>
                 <div>
                     <img src="img_photos/dream11.jpg" alt="girl grabbing her hair from behind">
@@ -211,7 +211,7 @@
             </div>
         </section>
         <section>
-            <h1>College Life</h1>
+            <h2>College Life</h2>
             <p>
                 I love waiting to capture just the right moment. It is important for me to capture the authenticity of
                 the
@@ -263,7 +263,7 @@
             </div>
         </section>
         <section>
-            <h1>Abstract Paintings</h1>
+            <h2>Abstract Paintings</h2>
             <p>
                 Its incredible to see the different ways in which you can use your camera to create beautiful and unique
                 results. For these images, I wanted to make abstract paintings using light. It was very fun to play
@@ -309,8 +309,10 @@
                 </div>
             </div>
 
-            <h1>Panning With Cars</h1>
-            <p>Panning is one of the most challenging types of photography I have tried. It is a lot of trial and error and learning how to be patient. Photographing cars made this process a lot easier since they move at a consistent speed. </p>
+            <h2>Panning With Cars</h2>
+            <p>Panning is one of the most challenging types of photography I have tried. It is a lot of trial and error
+                and learning how to be patient. Photographing cars made this process a lot easier since they move at a
+                consistent speed. </p>
             <div class="grid6">
                 <div>
                     <img src="img_photos/pan07.jpg" alt="white van driving by">
@@ -333,7 +335,7 @@
             </div>
         </section>
         <section>
-            <h1>Motion Blur</h1>
+            <h2>Motion Blur</h2>
             <p>
                 Every day I try to experiment with my photography. I find long shutter speeds to be really fun to play
                 with.
@@ -396,14 +398,14 @@
     <footer>
         <div class="footer">
             <div class="sitelinks">
-                <h2>Site Map</h2>
+                <h3>Explore</h3>
                 <a href="home.html">Maria Ruelas</a><br>
                 <a href="graphics.html">Graphic Design</a><br>
                 <a href="photos.html">Photography</a><br>
                 <a href="contact.html">Contact</a><br>
             </div>
             <div class="socials">
-                <h2>Contact Me</h2>
+                <h3>Contact Me</h3>
                 <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" class="instagram"
                         alt="instagram logo"></a>
                 <a href="tel:6039319825"><img src="phone_logo.png" class="phone" alt="phone logo"></a>
