--- a/project6/photos.html
+++ b/project6/photos.html
@@ -58,12 +58,7 @@
         <section>
             <h2>Black and White Portraits</h2>
             <p id="skip">
-                Whenever I am making a portrait I ask myself, what am I trying to communicate with this image? And how
-                would
-                I
-                want to be photographed? It is important to immerse yourself in the environment of the people you are
-                photographing to understand who they are and what they stand for. This way, you can communicate their
-                personality and essence through the images you make.
+                Whenever I am making a portrait I ask myself, what am I trying to communicate with this image? And how would I want to be photographed? It is important to immerse yourself in the environment of the people you are photographing to understand who they are and what they stand for. This way, you can communicate their personality and essence through the images you make.
             </p>
 
             <div class="grid">
@@ -159,9 +154,9 @@
         <section>
             <h2>Stuck In A Daydream</h2>
             <p>
-                Dreams have always been facinating to me. For this collection of photographs I wanted to achieve a
+                Dreams have always been fascinating to me. For this collection of photographs I wanted to achieve a
                 surreal,
-                angelic, and dreamy effect by playing around with in-camera filters. In order to achieve this look I
+                angelic, and dreamy effect by playing around with in-camera filters. To achieve this look I
                 took a
                 crafty approach and made my own camera filter. This process taught me that you can get really
                 interesting
@@ -265,10 +260,10 @@
         <section>
             <h2>Abstract Paintings</h2>
             <p>
-                Its incredible to see the different ways in which you can use your camera to create beautiful and unique
+                It's incredible to see the different ways in which you can use your camera to create beautiful and unique
                 results. For these images, I wanted to make abstract paintings using light. It was very fun to play
                 around
-                with different light colors and camera movements to get the results I was looking for.
+                with different light colors and camera movements to get the results I was looking for. The key to achieving this effect is to find creative light sources and lower the camera's shutter speed.
             </p>
             <div class="grid5">
                 <div>
@@ -310,9 +305,9 @@
             </div>
 
             <h2>Panning With Cars</h2>
-            <p>Panning is one of the most challenging types of photography I have tried. It is a lot of trial and error
+            <p>Panning is one of the most challenging types of photography I have tried. Panning creates such an interesting effect on photographs, providing a crisp image of the subject with a motion blurred background. It is a lot of trial and error
                 and learning how to be patient. Photographing cars made this process a lot easier since they move at a
-                consistent speed. </p>
+                consistent speed. I would recommend starting with any moving object such as this.</p>
             <div class="grid6">
                 <div>
                     <img src="img_photos/pan07.jpg" alt="white van driving by">
