--- a/project6/graphics.html
+++ b/project6/graphics.html
@@ -81,7 +81,7 @@
     <div class="illustrator1">
         <div>
             <img src="img_graphics/mouth_shirt.jpg"
-                alt="t-shirt design for the Graphic Design and Creative Media CRTC of a mouth pretending to smoke with a pen">
+                alt="t-shirt design for the Graphic Design and Creative Media CRTC">
         </div>
         <div>
             <img src="img_graphics/logo_chris.jpg" alt="logo for architecture firm">
@@ -114,7 +114,7 @@
                 class="magazine"><br><br>
         </div>
         <div>
-            <img src="img_graphics/magazine1.jpg" alt="Apple MacBook Pro advertisement for magazine back cover"
+            <img src="img_graphics/magazine1.jpg" alt="MacBook Pro advertisement for magazine back cover"
                 class="evolve_ad">
         </div>
     </div>
