--- a/project6/photos.html
+++ b/project6/photos.html
@@ -13,32 +13,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
-    <style>
-        .grid,
-        .grid2,
-        .grid3,
-        .grid4,
-        .grid5,
-        .grid6,
-        .grid7 {
-            display: grid;
-            grid-template-columns: 32% 32% 32%;
-            grid-gap: 1em;
-            margin-bottom: 50px;
-        }
-
-
-        .grid img,
-        .grid2 img,
-        .grid3 img,
-        .grid4 img,
-        .grid5 img,
-        .grid6 img,
-        .grid7 img {
-            width: 100%;
-            border-radius: 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -191,7 +165,7 @@
                 </div>
                 <div>
                     <img src="img_photos/dream06.jpg"
-                        alt="girl laying on pillow with one eye looking at the camera and the other eye covered with her extended arm">
+                        alt="girl laying on pillow with one eye looking at the camera">
                 </div>
                 <div>
                     <img src="img_photos/dream10.jpg"
@@ -297,7 +271,7 @@
                     <img src="img_photos/light10.jpg" alt="abstract orange and blue light going towrds camera">
                 </div>
                 <div>
-                    <img src="img_photos/light11.jpg" alt="Squiggly blue light abstract">
+                    <img src="img_photos/light11.jpg" alt="squiggly blue light abstract">
                 </div>
                 <div>
                     <img src="img_photos/light12.jpg" alt="orange and blue abstract">
